--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collagites</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body class="">
  <nav class="bg-white dark:bg-gray-900 fixed w-full  top-0 start-0 border-b border-gray-800 dark:border-gray-600 m-0 p-1">
@@ -73,7 +73,7 @@
                     <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-2xl text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 ">EC-602</button>
                 </div>
                 <div class="flex justify-evenly">
-                    <a href="notes.html" class="w-16">
+                    <a href="/notes.html" class="w-16">
                         <img src="/assests/notes.png" alt="notes"> <p class="text-blue-900 text-center text-sm">Notes</p>
                     </a>
                     <a href="/videos.html" class="w-16">
